k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: java-hello-world
  labels:
    name: java-hello-world
