k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-hello-world-service
  namespace: java-hello-world
  labels:
    app: java-hello-world
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: java-hello-world
